# ssh_automation

./: .gitignore  README.md  SUMMARY.md
.github/workflows/: ci.yml
linux_ssh_tools/: README.md  pyproject.toml  requirements.txt  setup.py
linux_ssh_tools/src/linux_ssh_tools/: __init__.py  cli.py  connection.py  exceptions.py  file_transfer.py  serial_comm.py  terminal.py  types.py
tests/: conftest.py  test_serial_comm.py  test_ssh_connection.py  test_terminal_launcher.py  test_terminal_password.py
